--- a/config.yml
+++ b/config.yml
@@ -1,27 +1,41 @@
-Modules:
-  Levitation: 5
-  Prefix: "&b[Superfly]"
+modules:
+  security: "5.3.0-AQTools" #Do not touch
+  prefix: "&b&lSuperfly &8
 
-Superfly:
-  Enabled:
-    Active: true
-    Title: "&b&lSuperfly"
-    Subtitle: "&fFlight mode &aEnabled"
-    Sound: LEVEL_UP:10:2
-  Disabled:
-    Active: true
-    Title: "&b&lSuperfly"
-    Subtitle: "&fFlight mode &cDisabled"
-  Permission:
-    Active: true
-    Title: "&b&lSuperfly"
-    Subtitle: "&cYou don't have permissions"
-    Sound: LAVA_POP:10:2
+styles:
+  default:
+    switch: true
+    permission: superfly.default
 
-Message:
-  Enabled: "%prefix% &fYour flight mode has been &aActivated"
-  Disabled: "%prefix% &fYour flight mode has been &cDisabled"
-  Error: "%prefix% &cThe command you just executed does not exist"
-  Reload: "%prefix% &aThe plugin folders were successfully reloaded"
-  NoPermission: "%prefix% &cYou do not have permissions to run this command"
-  Permission: "%prefix% &fYou need rank &e[Sxmuray] &fto get flight mode, you can purchase it at &astore.aquatic.studios"
+  levitation:
+    switch: false
+    number: 5
+    permission: superfly.levitation
+
+  jumped:
+    switch: false
+    permission: superfly.jumped
+
+superfly:
+  enabled:
+    switch: true
+    title: "&b&lSuperfly"
+    subtitle: "&fFlight mode &aEnabled"
+    sound: LEVEL_UP:10:2
+  disabled:
+    switch: true
+    title: "&b&lSuperfly"
+    subtitle: "&fFlight mode &cDisabled"
+  permission:
+    switch: true
+    title: "&b&lSuperfly"
+    subtitle: "&cYou don't have permissions"
+    sound: LAVA_POP:10:2
+
+messages:
+  enabled: "%prefix% &fYour flight mode has been &aActivated"
+  disabled: "%prefix% &fYour flight mode has been &cDisabled"
+  error: "%prefix% &cThe command you just executed does not exist"
+  reload: "%prefix% &aThe plugin folders were successfully reloaded"
+  nopermission: "%prefix% &cYou do not have permissions to run this command"
+  permission: "%prefix% &fYou need rank &e[Sxmuray] &fto get flight mode, you can purchase it at &astore.aquatic.studios"
